<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProyectoAgenda</string>
    <string name="updates">Ventana Modificacion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Telefono">Teléfono</string>
    <string name="Localidad">Localidad</string>
    <string name="Direccion">Dirección</string>
    <string name="Modificar">Modificar</string>
    <string name="Guardar">Guardar</string>
    <string name="CorreoE">Correo Electrónico</string>
    <string name="Alta">Alta</string>
    <string name="AcercaDe">Acerca de</string>
    <string name="Salir">Salir</string>
    <string name="acercaInf">Jesús Pinero Gomez. Agenda 26/11/2015</string>
    <string name="Buscar">Buscar</string>
    <string name="Retroceder">Retroceder</string>
    <string name="addtel">Añadir telefono</string>
    <string name="Exmalnombre">El nombre introducido no se encuentró</string>
    <string name="Exnointroducido">No se ha introducido nada</string>
    <string name="NomExist">El nombre ya existe</string>
    <string name="ContIntro">El contacto se ha introducido correctamente</string>
    <string name="ContMod">El contacto se ha modificado correctamente</string>
    <string name="ContBaj">Contacto eliminado</string>
    <string name="Borrar">Borrar</string>
    <string name="Error">Error</string>
    <string name="TelAni">Telefono añadido</string>
    <string name="Advertencia">Advertencia</string>
    <string name="Eliminar">¿Desea eliminarlo?</string>
    <string name="ok">Confirmar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="TelBaj">Telefono borrado</string>
    <string name="Calle">Calle</string>
    <string name="Avenida">Avenida</string>
    <string name="Plaza">Plaza</string>
    <string name="title_activity_alta">Alta</string>
    <string name="baja">Baja</string>
</resources>

