<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/ib1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/Buscar"
        android:onClick="buscar"
        android:src="@drawable/lupa" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ib1"
        android:layout_alignTop="@+id/ib1"
        android:layout_toLeftOf="@+id/ib1"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/listViewContactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btExit"
        android:layout_below="@+id/ib1">
    </ListView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Alta"
        android:id="@+id/btAlta"
        android:onClick="Alta"
        android:layout_gravity="bottom|center"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btExit"
        android:layout_toStartOf="@+id/btExit"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Salir"
        android:id="@+id/btExit"
        android:onClick="exit"
        android:layout_gravity="bottom|center"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/listViewContactos"
        android:layout_alignEnd="@+id/listViewContactos"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp" />

</RelativeLayout>
