<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="10sp">

        <TextView
            android:id="@+id/tvdal1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Nombre"
            android:gravity="bottom"
            android:textColor="#5fa8f7"
            android:textSize="19sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etda1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.63"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="10sp">

        <TextView
            android:id="@+id/tvdal2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.21"
            android:text="@string/Apellidos"
            android:gravity="bottom"
            android:textColor="#5fa8f7"
            android:textSize="19sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etda2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvdal3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Telefono"
            android:gravity="bottom"
            android:textColor="#5fa8f7"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginLeft="10sp" />

        <EditText
            android:id="@+id/etda3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.34"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.05"
        android:layout_marginBottom="20sp">

        <TextView
            android:id="@+id/tvdal4"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:paddingTop="12dp"
            android:text="@string/Direccion"
            android:gravity="bottom"
            android:textColor="#5fa8f7"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginLeft="10sp" />
        <Spinner
            android:id="@+id/sp1"
            android:layout_width="122dp"
            android:layout_height="110dp"
            android:layout_marginLeft="0dp" />

        <EditText
            android:id="@+id/etda4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:gravity="right"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="10sp">

        <TextView
            android:id="@+id/tvda5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Localidad"
            android:gravity="bottom"
            android:textColor="#5fa8f7"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginRight="9sp" />

        <EditText
            android:id="@+id/etda5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:ems="10"
            android:inputType="textPostalAddress" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:layout_marginLeft="10sp">

        <TextView
            android:id="@+id/tvda6"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:text="@string/mail"
            android:gravity="bottom"
            android:textColor="#5fa8f7"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginRight="9sp" />

        <EditText
            android:id="@+id/etda6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bda1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.12"
            android:onClick="alta"
            android:text="@string/Guardar"
            android:background="#5fa8f7"
            android:textColor="#ffffff"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

</LinearLayout>