<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/l1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start" >
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvm1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.34"
            android:text="@string/Nombre"
            android:gravity="bottom"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="#5fa8f7" />

        <EditText
            android:id="@+id/etm1"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvm2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Apellidos"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="#5fa8f7"
            android:gravity="bottom" />

        <EditText
            android:id="@+id/etm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:onClick="baja" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/tvm3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Telefono"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="#5fa8f7"
            android:gravity="bottom" />

        <EditText
            android:id="@+id/etm3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="delTel"
            android:src="@drawable/deltel" />

        <ImageButton
            android:id="@+id/iaddTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addTel"
            android:src="@drawable/anadirtel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/lvTel"
            android:layout_width="match_parent"
            android:layout_height="62dp" >

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvm4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/Direccion"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="#5fa8f7"
            android:layout_weight="0.09"
            android:gravity="bottom" />

        <Spinner
            android:id="@+id/spm1"
            android:layout_width="84dp"
            android:layout_height="36dp"
            android:layout_weight="0.09" />

        <EditText
            android:id="@+id/etm4"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvm5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Localidad"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="#5fa8f7"
            android:gravity="bottom" />

        <EditText
            android:id="@+id/etm5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25" >

        <TextView
            android:id="@+id/tvm6"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/mail"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="#5fa8f7"
            android:gravity="bottom" />

        <EditText
            android:id="@+id/etm6"
            android:layout_width="233dp"
            android:layout_height="28dp"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="#5fa8f7"
            android:textColor="#ffffff"
            android:layout_weight="0.26"
            android:onClick="modificar"
            android:text="@string/Modificar" />

        <Button
            android:id="@+id/bm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.41"
            android:background="#5fa8f7"
            android:textColor="#ffffff"
            android:onClick="baja"
            android:text="@string/borrar" />

    </LinearLayout>

</LinearLayout>